dataset1235/2025-2/1955397009/users/4151380891/executions/903431226_2826299531.log
== RUN (2025-08-26 12:31:30)
-- CODE: 
valor_compra = float(input())
valor_pago = float(input())
troco = valor_pago - valor-compra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valor-compra
                         ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valor-compra
                         ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valor-compra
                         ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valor-compra
                         ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valor-compra
                         ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valor-compra
                         ^^^^^
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 12:32:51)
-- CODE: 
valor_compra = float(input("compra: "))
valor_pago = float(input("paga: "))
troco = valor_pago - valor_compra
print(troco)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
---- user output:
compra: paga: 0.0
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
---- user output:
compra: paga: 2.75
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
---- user output:
compra: paga: 18.0
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
---- user output:
compra: paga: 19.0
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
---- user output:
compra: paga: 3.75
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
---- user output:
compra: paga: 52.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
